connect to selenoid